--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -1,22 +1,52 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="/styles.css" />
-  </head>
-  <body>
-    <nav>
-      <h1><a href="/">Welcome to Shabab</a></h1>
 
-      <ul>
-        <% if (user) { %>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>header</title>
+  <link rel="stylesheet" href="/styles.css" />
+
+  <style>
+    .mainheader {
+      position: relative;
+      top: -22rem;
+    }
+
+    .header img {
+      position: absolute;
+      width: 190px;
+      height: 190px;
+      left: -20rem;
+      top: -4rem;
+    }
+
+    .header h1 {
+      color: #9bf4d5 !important;
+      position: relative;
+      right: -9rem;
+    }
+  </style>
+
+</head>
+
+<body>
+  <nav class="header">
+    <div class="mainheader">
+      <img src="images/logo.png" alt="logo" />
+      <h1><a href="/">Shabab Al Burhan</a></h1>
+    </div>
+
+    <ul>
+      <% if (user) { %>
+        <li>Welcome, <%= user.email %>
+        </li>
         <li><a href="/logout">Log out</a></li>
         <% } else { %>
-        <li><a href="/login">Log in</a></li>
-        <li><a href="/signup" class="btn">Sign up</a></li>
-        <% } %>
-      </ul>
-    </nav>
-  </body>
+          <li><a href="/login">Log in</a></li>
+          <li><a href="/signup" class="btn">Sign up</a></li>
+          <% } %>
+    </ul>
+  </nav>
+</body>
+
 </html>
